# env-server-k8s

./: Dockerfile  README.md  app.py  pyproject.toml
base/: kustomization.yaml  pdb.yaml  service.yaml
kubernetes/base/: deployment.yaml  hpa.yaml
kubernetes/overlays/development/: kustomization.yaml  patch-deployment.yaml
kubernetes/overlays/production/: patch-production.yaml
overlays/production/: kustomization.yaml
